<resources>
    <string name="app_name">TaskW5</string>
    <string name="mostafa_mohammed">Mostafa Mohammed</string>
    <string name="_3_hr">3 hr</string>
    <string name="engineer">Engineer</string>
    <string name="iraq">Iraq</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="iq">IQ</string>
    <string name="_4_5">4.5</string>
    <string name="_150_reviews">(150 Reviews)</string>
</resources>