<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_margin="12dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toStartOf="@+id/linear_layout"
        app:layout_constraintTop_toTopOf="@+id/linear_layout"
        app:shapeAppearanceOverlay="@style/roundedCornersImageView" />

    <TextView
        android:ellipsize="end"
        android:id="@+id/text_name"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginStart="12dp"
        android:text="@string/mostafa_mohammed"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/oval_background"
        android:text="@string/_3_hr"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/text_name"
        app:layout_constraintEnd_toEndOf="@id/linear_layout"
        app:layout_constraintTop_toTopOf="@id/text_name" />

    <TextView
        android:id="@+id/text_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.87"
        android:text="@string/engineer"
        android:textColor="#122940"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:alpha="0.87"
        android:text="@string/iraq"
        android:textColor="#122940"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/text_department"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout"
        app:layout_constraintTop_toTopOf="@+id/text_department" />

    <TextView
        android:id="@+id/text_iso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.6"
        android:drawablePadding="4dp"
        android:text="@string/iq"
        android:textColor="#263238"
        android:textSize="13sp"
        android:textStyle="normal"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/text_department"
        app:layout_constraintTop_toBottomOf="@+id/text_department" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:alpha="0.38"
        android:text="@string/_5_days_ago"
        android:textColor="#122940"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/text_iso"
        app:layout_constraintEnd_toEndOf="@id/linear_layout"
        app:layout_constraintTop_toTopOf="@id/text_iso" />

    <TextView
        android:id="@+id/text_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="11dp"
        android:text="@string/_150_reviews"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="@id/text_iso"
        app:layout_constraintTop_toBottomOf="@id/text_iso" />

    <TextView
        android:id="@+id/text_review_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:drawablePadding="4dp"
        android:text="@string/_4_5"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="normal"
        app:drawableEndCompat="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/text_review"
        app:layout_constraintStart_toEndOf="@id/text_review"
        app:layout_constraintTop_toTopOf="@id/text_review" />

</androidx.constraintlayout.widget.ConstraintLayout>
